name:          unification
category:      Language, Compilers/Interpreters
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/unification/
bug-reports:   http://github.com/ekmett/unification/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Unification for free monads
description:   Unification for free monads
build-type:    Simple
extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/unification.git

library
  build-depends:
    base           >= 4       && < 5,
    free           >= 2.1,
    semigroups     >= 0.8.3.1,
    void           >= 0.5.6

  exposed-modules:
    Unification
    Unification.Class
    Unification.Kernel
    Unification.Exception
    Unification.IO
    Unification.ST

  ghc-options: -Wall
