name:          unification
category:      Language, Compilers/Interpreters
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/unification/
bug-reports:   http://github.com/ekmett/unification/issues
copyright:     Copyright (C) 2012-2014 Edward A. Kmett
synopsis:      Unification for free
description:   Unification for free
build-type:    Simple
extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/unification.git

library
  hs-source-dirs: src
  build-depends:
    base                >= 4.4      && < 5,
    comonad             >= 4.0      && < 5,
    free                >= 4.7      && < 5,
    mtl                 >= 2.0      && < 2.2,
    semigroups          >= 0.8.3.1  && < 1,
    prelude-extras      >= 0.4      && < 1,
    transformers        >= 0.2      && < 0.4,
    transformers-compat >= 0.1      && < 1,
    void                >= 0.5.6    && < 1

  exposed-modules:
    Control.Unification
    Control.Unification.Class
    Control.Unification.Kernel
    Control.Unification.Exception
    Control.Unification.IO
    Control.Unification.ST

  ghc-options: -Wall
